# routes/web.php
@@ -13,16 +13,16 @@
 
 
 
-Route::get('/', function () {
-    return view('layouts.master');
-});
 
 Auth::routes();
 Route::middleware('auth')->group(function(){
-    Route::get('/dashboard', 'DashboardController@index')->name('dashboard');
+    Route::get('/', 'DashboardController@index')->name('dashboard');
     Route::get('/map','MapController@index')->name('map');
     Route::get('/map/getMap','MapController@getMap')->name('map.getMap');
 });
 
 
 
+
+
+Route::resource('penggunas', 'PenggunaController');
